# bpinn

./: .gitignore  .zenodo.json  CITATION.cff  README.md  generate_manuscript_figures.py  pyproject.toml  requirements.txt  run_bpinn_examples.py  run_experiment.py
.github/workflows/: tests.yml
convection_diffusion_example_6_4/: adaptive_bpinn.py  atr_bpinn_blowup_time.py  bpinn_fi_bpinn.py  pinn_fi_pinn_apinn.py
fourth_order_blowup/: adaptive_bpinn.py  atr_bpinn_blowup_time.py  bpinn_fi_bpinn.py  pinn_fi_pinn_apinn.py  plot_3d_fi_bpinn.py
results/bpinn/: convection_model.pt  cubic_model.pt  fk_model.pt  fourth_model.pt  metrics.csv  summary.json
results/quick/: atr_runs.json  config.json  summary.json  threshold_predictions.csv
semilinear_parabolic_example_2/: adaptive_bpinn.py  bpinn_fi_bpinn.py  pinn_fi_pinn_apinn.py
semilinear_parabolic_example_4_1/: adaptive_bpinn.py  bpinn_fi_bpinn.py  pinn_fi_pinn_apinn.py
src/atr_bpinn/: __init__.py  atr.py  cli.py  config.py  example_references.py  experiment.py  extrapolation.py  fixed_bpinn.py  fixed_cli.py  fixed_experiments.py  manuscript_figures.py  model.py  plotting.py  problems.py  training.py
tests/: test_extrapolation.py  test_model.py  test_problems.py
